<resources>
    <string name="app_name">Cafe_House</string>

    <string name="coffee_house">Coffee\n<font color="#F1953e">H</font>ouse </string>
    <string name="get_started">Faça seu Pedido</string>
    <string name="coffee_house2">Coffee <font color="#F1953e">H</font>ouse</string>
    <string name="search_anything">Pesquise qualquer coisa</string>
    <string name="special_for_you">Especial para você</string>
    <string name="list">Lista</string>
    <string name="description">Descrição</string>
    <string name="coffee_size">Coffee Tamanho</string>
    <string name="price">Preço</string>
    <string name="_0">R$ 0</string>
    <string name="buy_now">Comprar Agora</string>
    <string name="background_cafe">background grãos de café</string>
    <string name="pesquise_qualquer_coisa">Pesquise qualquer coisa</string>
    <string name="cafes_populares">Cafés populares</string>
    <string name="categoria">Categoria</string>
    <string name="ver_todos">Ver todos</string>
    <string name="especial_para_voc">Especial para você</string>
    <string name="explorar">Explorar</string>
    <string name="explorar_icon">explorar icon</string>
    <string name="carrinho">Carrinho</string>
    <string name="carrinho_icon">carrinho icon</string>
    <string name="favoritos">Favoritos</string>
    <string name="favoritos_icon">favoritos icon</string>
    <string name="pedido_icon">pedido icon</string>
    <string name="meus_pedidos">Meus Pedidos</string>
    <string name="perfil_icon">perfil icon</string>
    <string name="perfil">Perfil</string>
    <string name="titulo">Titulo</string>
    <string name="voltar">Voltar</string>
    <string name="lista">Lista</string>
    <string name="back_icon">back icon</string>
    <string name="texto">texto</string>
    <string name="r">R$-</string>
    <string name="plus_icon">plus icon</string>
    <string name="coffee_tamanho">Coffee Tamanho</string>
    <string name="_1">1</string>
    <string name="minus_icon">minus icon</string>
    <string name="extra">extra</string>
    <string name="_00">0</string>
    <string name="descricao">Descrição</string>
    <string name="icon_star">icon star</string>
    <string name="icon_favorite">icon favorite</string>
    <string name="price_format">R$ %s</string>
    <string name="coffee_image">coffee image</string>
    <string name="meu_carrinho">Meu Carrinho</string>
    <string name="subtotal">Subtotal</string>
    <string name="entrega">Entrega</string>
    <string name="taxa_total">Taxa Total</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="carrinho_vazio">Seu carrinho está vazio</string>
</resources>
